src/base/variables.css
:root {
  /* Font families */
  --font-family: system-ui, sans-serif;
  --font-family-mono: ui-monospace, Menlo, Consolas, monospace;

  /* Font sizes */
  --font-size: 1rem;
  --font-size-small: calc(var(--font-size) * 0.875);
  --font-size-h6: var(--font-size);
  --font-size-h5: var(--font-size);
  --font-size-h4: calc(var(--font-size) * 1.1);
  --font-size-h3: calc(var(--font-size) * 1.25);
  --font-size-h2: calc(var(--font-size) * 1.45);
  --font-size-h1: calc(var(--font-size) * 2);
  --font-size-mono: 0.9em;

  /* Font weights */
  --font-weight-normal: 400;
  --font-weight-medium: 500;
  --font-weight-bold: 700;

  /* Spacing */
  /* Calculated with https://andreasphil.github.io/clamp/ */
  --body-padding-x: clamp(1rem, 1.495vw + 0.75rem, 2rem);
  --body-padding-y: clamp(2rem, 8.972vw - 0.125rem, 5rem);
  --outer-spacing-y: 2rem;
  --body-width: 50rem;
  --line-height: 1.5;
  --line-height-condensed: 1.2;

  /* Borders */
  --border-radius-small: 0.5rem;
  --border-radius: 0.75rem;
  --border-radius-large: 1.25rem;
  --border-width: 1px;
  --border-width-large: 2px;
  --outline: var(--border-width-large) solid var(--c-outline);
  --outline-inset: calc(-1 * var(--border-width-large));
  --outline-outset: var(--border-width-large);

  /* Transitions and other effects */
  --backdrop-glass: blur(16px) saturate(1.5);
  --disabled-opacity: 0.4;
  --transition-duration: 0.2s;
  --transition-timing-function: ease;
  --transition: var(--transition-duration) var(--transition-timing-function);

  /* Shadows */
  --shadow-elevation-low: 0 0.0625rem 0.125rem 0 var(--c-shadow);

  --shadow-elevation-medium: var(--shadow-elevation-low), 0 0.15rem 0.75rem -0.2rem var(--c-shadow);

  --shadow-elevation-high: var(--shadow-elevation-low), 0 0.3rem 1.5rem -0.3rem var(--c-shadow);

  /* Theme */
  --tint: 165;
  --primary: oklch(71% 0.165 var(--tint));

  /* Default color palette */
  --black: oklch(0% 0 0);
  --white: oklch(100% 0 0);

  --neutral-50: oklch(from var(--primary) 99% 0.001 h);
  --neutral-100: oklch(from var(--primary) 97% 0.003 h);
  --neutral-200: oklch(from var(--primary) 95% 0.008 h);
  --neutral-300: oklch(from var(--primary) 87% 0.012 h);
  --neutral-400: oklch(from var(--primary) 70% 0.02 h);
  --neutral-500: oklch(from var(--primary) 55% 0.025 h);
  --neutral-600: oklch(from var(--primary) 45% 0.02 h);
  --neutral-700: oklch(from var(--primary) 25% 0.018 h);
  --neutral-800: oklch(from var(--primary) 22% 0.017 h);
  --neutral-900: oklch(from var(--primary) 18% 0.012 h);
  --neutral-950: oklch(from var(--primary) 13% 0.005 h);

  --on-primary: var(--white);
  --primary-50: color-mix(in oklch, var(--c-bg), var(--primary) 9%);
  --primary-100: color-mix(in oklch, var(--c-bg), var(--primary) 18%);
  --primary-200: color-mix(in oklch, var(--c-bg), var(--primary) 40%);
  --primary-300: color-mix(in oklch, var(--c-bg), var(--primary) 60%);
  --primary-400: color-mix(in oklch, var(--c-bg), var(--primary) 70%);
  --primary-500: var(--primary);

  /* Contextual colors */
  --color-scheme: light dark;
  --c-border: light-dark(var(--neutral-200), var(--neutral-700));
  --c-border-variant: light-dark(var(--neutral-100), var(--neutral-800));
  --c-outline: light-dark(var(--primary), var(--primary));
  --c-shadow: light-dark(oklch(from var(--neutral-900) l c h / 6%), var(--c-bg));
  --c-bg: light-dark(var(--neutral-50), var(--neutral-950));
  --c-fg: light-dark(var(--neutral-950), var(--neutral-50));
  --c-fg-variant: light-dark(var(--neutral-400), var(--neutral-500));
  --c-link: var(--c-fg);
  --c-link-hover: var(--primary);
  --c-surface-bg: light-dark(var(--white), var(--neutral-900));
  --c-surface-fg: light-dark(var(--neutral-950), var(--neutral-50));
  --c-surface-variant-bg: light-dark(var(--neutral-100), var(--neutral-800));
  --c-surface-variant-fg: light-dark(var(--neutral-950), var(--neutral-50));
  --c-glass: oklch(from var(--c-surface-bg) l c h / 70%);
}

